<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">pratik_aman_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_new_releases">New releases</string>
<string name="lbl_5_albums">5 albums</string>
<string name="lbl_0_36">0:36</string>
<string name="lbl_3_albums">3 albums</string>
<string name="lbl_download">Download</string>
<string name="lbl_renaissance">Renaissance</string>
<string name="lbl_843_tracks">843 tracks</string>
<string name="lbl_23_albums">23 albums</string>
<string name="lbl_home">Home</string>
<string name="lbl_1_0_khz">1.0 kHz</string>
<string name="msg_restore_purchas">Restore purchases</string>
<string name="lbl_tobymac">TobyMac</string>
<string name="lbl_she_is_coming">SHE IS COMING</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_did_you_like_it">Did you like it</string>
<string name="lbl_emika">Emika</string>
<string name="lbl_sign_in">Sign in</string>
<string name="lbl_2_43">2:43</string>
<string name="lbl_miley_cyrus">Miley Cyrus</string>
<string name="lbl_adam_lambert">Adam Lambert</string>
<string name="lbl_lorn">Lorn</string>
<string name="lbl_tracks">Tracks</string>
<string name="lbl_3_db">3 dB</string>
<string name="lbl_3_43">3:43</string>
<string name="lbl_top">Top</string>
<string name="lbl_trial_version">Trial version</string>
<string name="lbl_velvet_side_a">VELVET: Side A</string>
<string name="lbl_23_hours">23 hours</string>
<string name="msg_low_frequency_g">Low frequency gain</string>
<string name="msg_forgot_your_log">Forgot your login or password?</string>
<string name="lbl_17_albums">17 albums</string>
<string name="lbl_epic_north">Epic North</string>
<string name="lbl_35_albums">35 albums</string>
<string name="msg_without_restric">without restrictions</string>
<string name="msg_play_now_playl">Play Now: Playlist «Mysterious»</string>
<string name="lbl_ivar_s_revenge">Ivar\u2019s Revenge</string>
<string name="lbl_artist">Artist</string>
<string name="lbl_i_don_t_like_it">I don\u2019t like it</string>
<string name="lbl_playlists">Playlists</string>
<string name="lbl_urgent_siege">Urgent Siege</string>
<string name="lbl_view_all">View All</string>
<string name="lbl_mac_quayle">Mac Quayle</string>
<string name="lbl_list">List</string>
<string name="lbl_burning">Burning</string>
<string name="lbl_classical_music">Classical music</string>
<string name="lbl_0_db">0 dB</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_favourites">Favourites</string>
<string name="lbl_password">Password</string>
<string name="lbl_2018">2018</string>
<string name="lbl_flower_power">Flower Power</string>
<string name="lbl_150_hz">150 Hz</string>
<string name="lbl_top_playlists">Top Playlists</string>
<string name="lbl_4_db2">-4 dB</string>
<string name="lbl_2_4_khz">2.4 kHz</string>
<string name="lbl_damned_anthem">Damned Anthem</string>
<string name="lbl_brand_x_music">Brand X Music</string>
<string name="lbl_album">Album</string>
<string name="lbl_podval_caplella">Podval Caplella</string>
<string name="lbl_bones">BONES</string>
<string name="lbl_entangled">Entangled</string>
<string name="lbl_song_lyrics">Song lyrics</string>
<string name="lbl_erlik_bachman">Erlik Bachman</string>
<string name="lbl_4_db">4 dB</string>
<string name="lbl_favorites">Favorites</string>
<string name="lbl_listen_to_music">Listen to music</string>
<string name="lbl_15_khz">15 kHz</string>
<string name="lbl_create_account">Create account</string>
<string name="lbl_setting">Setting</string>
<string name="lbl_default">Default</string>
<string name="lbl_add_to_playlist">Add to Playlist</string>
<string name="lbl_music_list">Music List</string>
<string name="lbl_club_music">Club music</string>
<string name="lbl_ray_charles">Ray Charles</string>
<string name="msg_enter_promo_cod">Enter promo code</string>
<string name="lbl_60_hz">60 Hz</string>
<string name="lbl_400_hz">400 Hz</string>
<string name="lbl_profile">Profile</string>
<string name="lbl">Элджей</string>
<string name="lbl_now">NOW</string>
<string name="msg_the_cycle_conti">The Cycle Continues</string>
<string name="lbl_email">Email</string>
<string name="lbl_equalizer">Equalizer</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="lbl_search">Search</string>
<string name="lbl_1">1</string>
<string name="msg_this_is_not_a_t">This Is Not A Test</string>
<string name="lbl_2">2</string>
<string name="lbl_3">3</string>
<string name="lbl_4">4</string>
<string name="lbl_albums">Albums</string>
<string name="lbl_flashbacks">Flashbacks</string>
<string name="lbl_danheim">Danheim</string>
<string name="lbl_login">Login</string>
<string name="msg_valid_until_may">Valid until May 23, 2021</string>
<string name="lbl_playlist">Playlist</string>
<string name="lbl_surtr">Surtr</string>
<string name="msg_free_for_3_mont">Free for 3 months, then $12 a month</string>
<string name="lbl_artists">Artists</string>
<string name="lbl_song_menu_full">Song Menu Full</string>
<string name="lbl_quit">Quit</string>
<string name="lbl_my_settings">My Settings</string>
<string name="lbl_home_page">Home Page</string>
<string name="lbl_1_album">1 album</string>
<string name="lbl_dance_music">Dance music</string>
<string name="msg_bachman_mail_co">Bachman@mail.com</string>
<string name="msg_david_garcia_di">David Garcia Diaz, Andy LaPle\u2026</string>
<string name="lbl_my_subscription">My subscription</string>
<string name="lbl_wunder_king">Wunder King</string>
</resources>
