<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="settingVM" type="com.pratikamansapplication.app.modules.setting.data.viewmodel.SettingVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearSetting"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblack_900">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearAppBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_width="@dimen/_10pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEqualizer"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtEqualizer}"
                    style="@style/txtRobotoregular20" tools:text="@string/lbl_equalizer"/>
                <ImageView android:id="@+id/imageClose"
                    android:layout_height="@dimen/_13pxh"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_close"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearEqualizers"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearFrequancyrange"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtDbCounter"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtDbCounter}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_4_db"/>
                <ImageView android:id="@+id/imageOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_298pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHzCounter"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtHzCounter}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_60_hz"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearFrequancyrange1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtDbCounterOne"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtDbCounterOne}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_3_db"/>
                <ImageView android:id="@+id/imageTwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_298pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtHzCounterOne"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtHzCounterOne}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_150_hz"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearFrequancyrange2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtDbCounterTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtDbCounterTwo}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_0_db"/>
                <ImageView android:id="@+id/imageThree"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_298pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtHzCounterTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtHzCounterTwo}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_400_hz"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearFrequancyrange3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtDbCounterThree"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtDbCounterThree}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_0_db"/>
                <ImageView android:id="@+id/imageFour"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_298pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtKhzCounter"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtKhzCounter}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_1_0_khz"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearFrequancyrange4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtDB"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtDB}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_4_db2"/>
                <ImageView android:id="@+id/imageFive"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_298pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtKhzCounterOne"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtKhzCounterOne}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_2_4_khz"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearFrequancyrange5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtDbCounterFour"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtDbCounterFour}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_0_db"/>
                <ImageView android:id="@+id/imageSix"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_298pxh"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_1"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtKhzCounterTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{settingVM.settingModel.txtKhzCounterTwo}"
                    style="@style/txtRobotoregular12" tools:text="@string/lbl_15_khz"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtMySettings"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtMySettings}"
            style="@style/txtRobotoregular16" tools:text="@string/lbl_my_settings"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDefault"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtDefault}"
            style="@style/txtRobotoregular16" tools:text="@string/lbl_default"/>
        <TextView android:ellipsize="end" android:id="@+id/txtClubmusic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtClubmusic}"
            style="@style/txtRobotoregular16_1" tools:text="@string/lbl_club_music"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtClassicalmusic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtClassicalmusic}"
            style="@style/txtRobotoregular16" tools:text="@string/lbl_classical_music"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDancemusic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtDancemusic}"
            style="@style/txtRobotoregular16" tools:text="@string/lbl_dance_music"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLowfrequencyg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtLowfrequencyg}"
            style="@style/txtRobotoregular16" tools:text="@string/msg_low_frequency_g"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLowfrequencygOne"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{settingVM.settingModel.txtLowfrequencygOne}"
            style="@style/txtRobotoregular16" tools:text="@string/msg_low_frequency_g"/>
    </LinearLayout>
</layout>
