<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.pratikamansapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_700">
        <TextView android:ellipsize="end" android:id="@+id/txtSignin"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtSignin}"
            style="@style/txtRobotomedium28" tools:text="@string/lbl_sign_in"/>
        <EditText
            android:background="@drawable/rectangle_bg_black_900_a6_radius_9"
            android:ellipsize="end" android:fontFamily="@font/roboto"
            android:hint="@string/lbl_email"
            android:id="@+id/etEmainfield" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etEmainfieldValue}"
            android:textColor="@color/white_A700"
            android:textColorHint="@color/white_A700"
            android:textFontWeight="400"
            android:textSize="@dimen/_16pxh" android:textStyle="normal" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_black_900_a6_radius_9"
            android:ellipsize="end" android:fontFamily="@font/roboto"
            android:hint="@string/lbl_password"
            android:id="@+id/etPasswordfield" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={loginVM.loginModel.etPasswordfieldValue}"
            android:textColor="@color/white_A700"
            android:textColorHint="@color/white_A700"
            android:textFontWeight="400"
            android:textSize="@dimen/_16pxh" android:textStyle="normal" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearSignin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylewhite_1">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearSignin1"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_4">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtSigninOne"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtSigninOne}"
                    style="@style/txtRobotoregular18" tools:text="@string/lbl_sign_in"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotyourlog"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtForgotyourlog}"
            style="@style/txtRobotoregular14" tools:text="@string/msg_forgot_your_log"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCreateaccount"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_9pxh"
            android:paddingStart="@dimen/_9pxh"
            android:paddingTop="@dimen/_3pxv" android:singleLine="true"
            android:text="@{loginVM.loginModel.txtCreateaccount}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_create_account"/>
    </LinearLayout>
</layout>
